--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "css-loader": "^5.0.1",
+    "jquery": "^3.5.1",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "style-loader": "^2.0.0",
@@ -29,7 +30,8 @@
     "postcss-preset-env": "^6.7.0",
     "url-loader": "^4.1.1",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "workbox-webpack-plugin": "^6.0.2"
   },
   "browserslist": {
     "development": [
@@ -44,7 +46,10 @@
     ]
   },
   "eslintConfig": {
-    "extends": "airbnb-base"
+    "extends": "airbnb-base",
+    "env": {
+      "browser": true
+    }
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
