--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.12.9",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "babel-loader": "^8.2.2",
     "core-js": "^3.8.1",
     "eslint": "^7.15.0",
