--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
+    "terser-webpack-plugin": "^5.0.3",
     "url-loader": "^4.1.1",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
